@@ -12,6 +12,7 @@ v 2.6
 ##############
 
 user-visible CHANGES:
++ changed default integration measure from e2 to e1 in CvMdist
 + title changed to title style / capitalization
 + added generating function "EmpiricalMVDistribution" for computing
   empirical distribution of multivariate data
